--- a/.drone.yml
+++ b/.drone.yml
@@ -18,6 +18,8 @@ steps:
 - name: docker-publish
   image: plugins/docker
   settings:
+    build_args:
+    - ARCH=amd64
     dockerfile: package/Dockerfile
     password:
       from_secret: docker_password
@@ -59,6 +61,8 @@ steps:
 - name: docker-publish
   image: plugins/docker
   settings:
+    build_args:
+    - ARCH=arm64
     dockerfile: package/Dockerfile
     password:
       from_secret: docker_password
@@ -100,6 +104,8 @@ steps:
 - name: docker-publish
   image: plugins/docker
   settings:
+    build_args:
+    - ARCH=arm
     dockerfile: package/Dockerfile
     password:
       from_secret: docker_password
