--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -12,7 +12,7 @@ RUN apk add -U --no-cache bash bash-completion jq
 RUN echo 'shell:x:1000:1000:shell,,,:/home/shell:/bin/bash' > /etc/passwd && \
     echo 'shell:x:1000:' > /etc/group && \
     mkdir /home/shell && \
-    echo '. /etc/bash_completion' >> /home/shell/.bashrc && \
+    echo '. /etc/profile.d/bash_completion.sh' >> /home/shell/.bashrc && \
     echo 'alias k="kubectl"' >> /home/shell/.bashrc && \
     echo 'alias ks="kubectl -n kube-system"' >> /home/shell/.bashrc && \
     echo 'source <(kubectl completion bash)' >> /home/shell/.bashrc && \
