--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -8,7 +8,7 @@ RUN if [ "${ARCH}" = "amd64" ]; then ARCH=x86_64; fi && \
 RUN curl -L https://get.helm.sh/helm-v3.3.1-linux-${ARCH}.tar.gz | tar xvzf - --strip-components=1
 
 FROM alpine:3.12
-RUN apk add -U --no-cache bash bash-completion jq
+RUN apk add -U --no-cache bash bash-completion jq curl
 RUN echo 'shell:x:1000:1000:shell,,,:/home/shell:/bin/bash' > /etc/passwd && \
     echo 'shell:x:1000:' > /etc/group && \
     mkdir /home/shell && \
