Cleanup output of helm

--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -1,3 +1,7 @@
+FROM golang:1.13 AS helm
+RUN git -C / clone --branch v3.3.3-rancher3 --depth=1 https://github.com/rancher/helm
+RUN make -C /helm
+
 FROM alpine:3.12 AS build
 ARG ARCH=amd64
 RUN apk add -U curl xz
@@ -5,7 +9,6 @@ RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.18.2/b
     chmod +x kubectl
 RUN if [ "${ARCH}" = "amd64" ]; then ARCH=x86_64; fi && \
     curl -L https://github.com/derailed/k9s/releases/download/v0.20.2/k9s_Linux_${ARCH}.tar.gz | tar xvzf -
-RUN curl -L https://get.helm.sh/helm-v3.3.1-linux-${ARCH}.tar.gz | tar xvzf - --strip-components=1
 
 FROM alpine:3.12
 RUN apk add -U --no-cache bash bash-completion jq
@@ -20,7 +23,8 @@ RUN echo 'shell:x:1000:1000:shell,,,:/home/shell:/bin/bash' > /etc/passwd && \
     mkdir /home/shell/.kube && \
     chown -R shell /home/shell && \
     chmod 700 /run
-COPY --from=build /kubectl /k9s /helm /usr/local/bin/
+COPY --from=helm ./helm/bin/helm /usr/local/bin/
+COPY --from=build /kubectl /k9s /usr/local/bin/
 COPY package/helm-cmd package/welcome /usr/local/bin/
 USER 1000
 WORKDIR /home/shell
