--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -3,7 +3,7 @@ RUN zypper -n install git
 RUN git -C / clone --branch release-v3.9.0 --depth=1 https://github.com/rancher/helm
 RUN make -C /helm
 
-FROM registry.suse.com/bci/bci-base:15.4.27.8.6 AS build
+FROM registry.suse.com/bci/bci-base:15.4.27.11.5 AS build
 ARG ARCH=amd64
 RUN zypper -n install curl gzip tar
 ENV KUBECTL_VERSION v1.21.8
@@ -18,9 +18,9 @@ RUN if [ "${ARCH}" = "amd64" ] || [ "${ARCH}" = "arm64" ] || [ "${ARCH}" = "s390
     curl -sLf ${KUSTOMIZE_URL} | tar -xzf - && chmod +x kustomize; \
     fi
 
-FROM registry.suse.com/bci/bci-base:15.4.27.8.6
+FROM registry.suse.com/bci/bci-base:15.4.27.11.5
 RUN zypper -n update && \
-    zypper -n install bash-completion vim jq && \
+    zypper -n install bash-completion gzip jq tar unzip vim wget && \
     zypper clean -a && rm -rf /tmp/* /var/tmp/* /usr/share/doc/packages/* /usr/share/doc/manual/* /var/log/*
 RUN echo 'shell:x:1000:1000:shell,,,:/home/shell:/bin/bash' > /etc/passwd && \
     echo 'shell:x:1000:' > /etc/group && \
