--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,10 @@ steps:
   volumes:
   - name: docker
     path: /var/run/docker.sock
+  when:
+    event:
+    - pull_request
+    - tag
 
 - name: docker-publish
   image: plugins/docker
@@ -30,9 +34,6 @@ steps:
   when:
     instance:
     - drone-publish.rancher.io
-    ref:
-    - refs/head/master
-    - refs/tags/*
     event:
     - tag
 
@@ -57,6 +58,10 @@ steps:
   volumes:
   - name: docker
     path: /var/run/docker.sock
+  when:
+    event:
+    - pull_request
+    - tag
 
 - name: docker-publish
   image: plugins/docker
@@ -73,9 +78,6 @@ steps:
   when:
     instance:
     - drone-publish.rancher.io
-    ref:
-    - refs/head/master
-    - refs/tags/*
     event:
     - tag
 
@@ -104,6 +106,10 @@ steps:
   volumes:
   - name: docker
     path: /var/run/docker.sock
+  when:
+    event:
+    - pull_request
+    - tag
 
 - name: docker-publish
   image: rancher/drone-images:docker-s390x
@@ -123,9 +129,6 @@ steps:
   when:
     instance:
     - drone-publish.rancher.io
-    ref:
-    - refs/head/master
-    - refs/tags/*
     event:
     - tag
 
@@ -159,9 +162,6 @@ steps:
   when:
     instance:
     - drone-publish.rancher.io
-    ref:
-    - refs/head/master
-    - refs/tags/*
     event:
     - tag
 
