renovate: Test support for module specific tags
Signed-off-by: Paulo Gomes <paulo.gomes@suse.com>

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "github>rancher/renovate-config#release"
+    "github>rancher/renovate-config#modigest"
   ],
   "baseBranches": [
     "master"
