--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,6 @@ jobs:
       uses: docker/setup-buildx-action@v3
     - name: Checkout code
       uses: actions/checkout@v4
-  
     - name: Build and push all image variations
       run: |
         make image-push
@@ -40,5 +39,5 @@ jobs:
         TAG="${TAG}-arm64" TARGET_PLATFORMS=linux/arm64 make image-push
         TAG="${TAG}-s390x" TARGET_PLATFORMS=linux/s390x make image-push
       env:
-        TAG: ${{ github.ref_name }}
+        TAG: ${{ github.ref == 'refs/heads/main' && 'head' || github.ref_name }}
         REPO: ${{ vars.PUBLIC_REGISTRY }}/${{ vars.PUBLIC_REGISTRY_REPO }}
