--- a/.github/workflows/port-issue.yaml
+++ b/.github/workflows/port-issue.yaml
@@ -9,6 +9,8 @@ on:
 
 jobs:
   port-issue:
+    permissions:
+      issues: write
     runs-on: ubuntu-latest
     if: ${{ !github.event.issue.pull_request && (contains(github.event.comment.body, '/backport') || contains(github.event.comment.body, '/forwardport')) }}
     steps:
