Remove kubectl related steps

--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -24,18 +24,15 @@ FROM --platform=$BUILDPLATFORM registry.suse.com/bci/bci-base:${BCI_VERSION} AS 
 RUN zypper -n install curl gzip tar
 
 # Define build arguments
-ARG KUBECTL_VERSION KUBECTL_SUM_arm64 KUBECTL_SUM_amd64 KUBECTL_SUM_s390x \
-    KUSTOMIZE_VERSION KUSTOMIZE_SUM_arm64 KUSTOMIZE_SUM_amd64 KUSTOMIZE_SUM_s390x \
-    K9S_VERSION K9S_SUM_arm64 K9S_SUM_amd64 K9S_SUM_s390x
-
+ARG KUSTOMIZE_VERSION
+ARG KUSTOMIZE_SUM_arm64
+ARG KUSTOMIZE_SUM_amd64
+ARG KUSTOMIZE_SUM_s390x
+ARG K9S_VERSION
+ARG K9S_SUM_arm64
+ARG K9S_SUM_amd64
+ARG K9S_SUM_s390x
 ARG TARGETARCH
-# Stage kubectl into build
-ADD --chown=root:root --chmod=0755 \
-    "https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/${TARGETARCH}/kubectl" \
-    /kubectl
-
-ENV KUBECTL_SUM="KUBECTL_SUM_${TARGETARCH}"
-RUN echo "${!KUBECTL_SUM}  /kubectl" | sha256sum -c -
 
 # Stage kubectl into build
 ENV KUSTOMIZE_SUM="KUSTOMIZE_SUM_${TARGETARCH}"
@@ -84,7 +81,7 @@ FROM scratch
 
 COPY --from=zypper /chroot /
 COPY --chown=root:root --chmod=0755 --from=helm /helm/bin/helm /usr/local/bin/
-COPY --chown=root:root --chmod=0755 --from=build /kubectl /k9s /kustomize* /usr/local/bin/
+COPY --chown=root:root --chmod=0755 --from=build /k9s /kustomize* /usr/local/bin/
 COPY --chown=root:root --chmod=0755 package/helm-cmd package/welcome /usr/local/bin/
 COPY --chown=1000:1000 --chmod=0755 package/kustomize.sh /home/shell/
 
