Add kubectl back via kuberlr

--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -1,5 +1,6 @@
 ARG BCI_VERSION=15.6
 FROM registry.suse.com/bci/bci-busybox:${BCI_VERSION} AS final
+FROM rancher/kuberlr-kubectl:head AS kuberlr
 
 # Image that provides cross compilation tooling.
 FROM --platform=$BUILDPLATFORM rancher/mirrored-tonistiigi-xx:1.3.0 AS xx
@@ -74,6 +75,11 @@ RUN echo 'shell:x:1000:1000:shell,,,:/home/shell:/bin/bash' > /chroot/etc/passwd
         echo 'LANG=en_US.UTF-8' >> /chroot/home/shell/.bashrc && \
         echo 'PS1="> "' >> /chroot/home/shell/.bashrc && \
         mkdir /chroot/home/shell/.kube && \
+        mkdir /chroot/home/shell/.kuberlr && \
+        touch /chroot/home/shell/.kuberlr/kuberlr.conf && \
+        echo "AllowDownload = false" >> /chroot/home/shell/.kuberlr/kuberlr.conf && \
+        echo 'SystemPath = "/usr/local/bin"' >> /chroot/home/shell/.kuberlr/kuberlr.conf && \
+        echo "Timeout = 6" >> /chroot/home/shell/.kuberlr/kuberlr.conf && \
         chown -R 1000:1000 /chroot/home/shell && \
         chmod 700 /chroot/run
 
@@ -82,6 +88,9 @@ FROM scratch
 COPY --from=zypper /chroot /
 COPY --chown=root:root --chmod=0755 --from=helm /helm/bin/helm /usr/local/bin/
 COPY --chown=root:root --chmod=0755 --from=build /k9s /kustomize* /usr/local/bin/
+COPY --chown=root:root --chmod=0755 --from=kuberlr /usr/bin/kubectl* /usr/local/bin/
+COPY --chown=root:root --chmod=0755 --from=kuberlr /bin/kuberlr /bin/
+RUN ln -s /bin/kuberlr /bin/kubectl
 COPY --chown=root:root --chmod=0755 package/helm-cmd package/welcome /usr/local/bin/
 COPY --chown=1000:1000 --chmod=0755 package/kustomize.sh /home/shell/
 
