drop s390x image builds

--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -24,9 +24,9 @@ FROM --platform=$BUILDPLATFORM registry.suse.com/bci/bci-base:${BCI_VERSION} AS 
 RUN zypper -n install curl gzip tar
 
 # Define build arguments
-ARG KUBECTL_VERSION KUBECTL_SUM_arm64 KUBECTL_SUM_amd64 KUBECTL_SUM_s390x \
-    KUSTOMIZE_VERSION KUSTOMIZE_SUM_arm64 KUSTOMIZE_SUM_amd64 KUSTOMIZE_SUM_s390x \
-    K9S_VERSION K9S_SUM_arm64 K9S_SUM_amd64 K9S_SUM_s390x
+ARG KUBECTL_VERSION KUBECTL_SUM_arm64 KUBECTL_SUM_amd64 \
+    KUSTOMIZE_VERSION KUSTOMIZE_SUM_arm64 KUSTOMIZE_SUM_amd64 \
+    K9S_VERSION K9S_SUM_arm64 K9S_SUM_amd64
 
 ARG TARGETARCH
 # Stage kubectl into build
