update renovate config for active branches

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,6 +4,7 @@
   ],
   "baseBranches": [
     "main",
+    "release/v2.10",
     "release/v2.9",
     "release/v2.8"
   ],
@@ -14,21 +15,28 @@
       "matchDepNames": [
         "kubernetes/kubernetes"
       ],
-      "allowedVersions": "<1.30.0"
+      "allowedVersions": "<1.33.0"
+    },
+    {
+      "matchBaseBranches": ["release/v2.10"],
+      "matchDepNames": [
+        "kubernetes/kubernetes"
+      ],
+      "allowedVersions": "<1.32.0"
     },
     {
       "matchBaseBranches": ["release/v2.9"],
       "matchDepNames": [
         "kubernetes/kubernetes"
       ],
-      "allowedVersions": "<1.29.0"
+      "allowedVersions": "<1.30.0"
     },
     {
       "matchBaseBranches": ["release/v2.8"],
       "matchDepNames": [
         "kubernetes/kubernetes"
       ],
-      "allowedVersions": "<1.28.0"
+      "allowedVersions": "<1.29.0"
     }
   ]
 }
