Update to use new datasource feature

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": [
-    "github>rancher/renovate-config#modigest"
+    "github>rancher/renovate-config#main"
   ],
   "baseBranches": [
     "main",
