Update renovate config and readme

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,15 +11,19 @@
   "prHourlyLimit": 2,
   "packageRules": [
     {
-      "matchBaseBranches": ["main", "release/v2.11"],
+      "matchBaseBranches": ["main", "release/v2.12"],
       "extends": ["github>rancher/renovate-config:rancher-main#release"]
+    },
+    {
+      "matchBaseBranches": ["release/v2.11"],
+      "extends": ["github>rancher/renovate-config:rancher-2.11#release"]
     },
     {
       "matchBaseBranches": ["release/v2.10"],
       "extends": ["github>rancher/renovate-config:rancher-2.10#release"]
     },
     {
-      "matchBaseBranches": ["release/v2.10"],
+      "matchBaseBranches": ["release/v2.9"],
       "extends": ["github>rancher/renovate-config:rancher-2.9#release"]
     }
   ]
